--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
     "next": "13.4.19",
     "react": "^18",
     "react-dom": "^18",
-    "react-markdown": "^10.1.0"
-  },
-  "devDependencies": {
+    "react-markdown": "^10.1.0",
     "@tailwindcss/typography": "^0.5.16",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.23",
