--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.16",
+    "autoprefixer": "^10.4.14",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.23.11",
     "next": "13.4.19",
+    "postcss": "^8.4.23",
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^10.1.0",
-    "@tailwindcss/typography": "^0.5.16",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.23",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.3.0"
   }
 }
